deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: design-storage-production
spec:
  selector:
    matchLabels:
      app: design-storage
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: design-storage
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/design-storage:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "design_storage.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /design-storage/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
